fix overflow in contact and redirect in mobile for contact

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+/* * {
+  border: 2px solid red;
+} */
+
 .image-container {
   position: relative;
   overflow: hidden;
